[package]
name = "syzygy-files"
version = "0.1.0"
edition = "2021"
authors = ["Mario Guerrieri <mario@guerrieri.codes>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ['http'] }
worker-macros = { version = "0.6", features = ['http'] }
http = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
